# DIGA

TP1 CALCULATRICE/: CMakeLists.txt  calculatrice.cpp  calculatrice.h  main.cpp
TP2 PAINT/: CMakeLists.txt  buttoncouleur.cpp  buttoncouleur.h  fenetre.cpp  fenetre.h  main.cpp  zonedessin.cpp  zonedessin.h
